# pygonito

./: LICENSE  README.md  pyproject.toml
pygonito/: __init__.py
pygonito/information_extraction/: multi_label.py
pygonito/object_detection/: regenerate-config.py  visualize-bboxes.py
pygonito/object_detection/coco/: coco2classes.py  coco2gonito.py  coco2gonito.sh  coco_to_gonito.py  gonito2coco.py  hashutils.py  init
pygonito/object_detection/coco/gonito2coco/: Dockerfile  gonito2coco.py  requirements.txt  run.sh
pygonito/ocr/ocr2bareocr/: ocr2bareocr.py  ocr2bareocr.sh
pygonito/torchvision/: gonitodataset.py
pygonito/utils/: __init__.py  hashutils.py
tests/: test_pygonito.py
