[tool.poetry]
name = "pygonito"
version = "0.1.0"
description = ""
authors = ["Filip Graliński <filip.gralinski@applica.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
Pillow = "^9.0.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
